# ChangeLog for x11-terms/wterm
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/wterm/Attic/ChangeLog,v 1.12 2004/06/24 23:23:08 agriffis Exp $

  11 Jun 2004; Jason Wever <weeve@gentoo.org> wterm-6.2.9-r2.ebuild:
  Stable on sparc.

  18 Apr 2004; Jason Wever <weeve@gentoo.org> wterm-6.2.9-r2.ebuild:
  Added ~sparc keyword.

  27 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> wterm-6.2.9-r2.ebuild:
  don't assign default to S; tidy

  15 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org> wterm-6.2.9-r2.ebuild:
  set ~ppc in keywords

*wterm-6.2.9-r2 (13 Jan 2003)
  27 Mar 2003; Masatomo Nakano <nakano@gentoo.org> wterm-6.2.9-r2.ebuild:
  Marked as stable.

  19 Jan 2003; Masatomo Nakano <nakano@gentoo.org> wterm-6.2.9-r2.ebuild:
  added Kanji(Japanese chars) support. 
  thanks to chutz@chubaka.net (Georgi Georgiev). bugs #13870

  13 Jan 2003; Nick Hadaway <raker@gentoo.org> wterm-6.2.9-r2.ebuild,
  files/digest-wterm-6.2.9-r1 :
  Now setting rxvt as the default term value and specifying some
  configure options to make doubly sure that the nice features get
  compiled in.

*wterm-6.2.9-r1 (08 Jan 2002)

  08 Jan 2002; Nick Hadaway <raker@gentoo.org> wterm-6.2.9-r1.ebuild,
  files/digest-wterm-6.2.9-r1 :
  New ebuild which fixes man page location and adds some pixmaps and
  tiffs.

*wterm-6.2.9 (23 Oct 2002)

  17 Nov 2002; Nick Hadaway <raker@gentoo.org> wterm-6.2.9.ebuild :
  Updated dependancies to include WindowMaker.

  23 Oct 2002; Nick Hadaway <raker@gentoo.org> wterm-6.2.9.ebuild,
  files/digest-wterm-6.2.9 :
  Initial ebuild.