@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/wterm/Attic/wterm-6.2.9-r2.ebuild,v 1.12 2004/09/02 16:48:35 pvdabeel Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/wterm/Attic/wterm-6.2.9-r2.ebuild,v 1.13 2005/10/02 13:55:22 metalgod Exp $
 
 DESCRIPTION="A fork of rxvt patched for fast transparency and a NeXT scrollbar"
 HOMEPAGE="http://largo.windowmaker.org/files.php#wterm"
@@ -8,7 +8,7 @@ SRC_URI="http://largo.windowmaker.org/files/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ppc sparc"
+KEYWORDS="~amd64 ppc sparc x86"
 IUSE="cjk"
 
 DEPEND="virtual/x11
