@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/wterm
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/wterm/Attic/ChangeLog,v 1.12 2004/06/24 23:23:08 agriffis Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/wterm/Attic/ChangeLog,v 1.13 2005/10/02 13:55:22 metalgod Exp $
+
+  02 Oct 2005; Luis Medinas <metalgod@gentoo.org> wterm-6.2.9-r2.ebuild:
+  Added ~amd64 keyword.
 
   11 Jun 2004; Jason Wever <weeve@gentoo.org> wterm-6.2.9-r2.ebuild:
   Stable on sparc.
